# astartes-primaris

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  cloudbuild.yaml  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml  post-create.sh
docs/: STYLE_MANUAL.md
docs/design/strategium-v2/: README.md  Strategium.html  app.js  data.js  style.css
ecosystem/: CHANGELOG.md  PATTERNS.md
ecosystem/mcp-gallery/: GALLERY.md
ecosystem/model-zoo/: INDEX.md
ecosystem/shared/: __init__.py  cross_pollinate.py  sync_contract.py
infra/: deploy.sh  setup-trigger.sh  setup-workstation.sh
infra/docker/python-base/: Dockerfile  verify-extensions.py
infra/docker/workstation/: Dockerfile  settings.json  startup.sh
infra/terraform/: main.tf  terraform.tfvars.example  workstations.tf
schemas/events/: README.md
schemas/protobuf/: imperium.proto  services.proto
sdk/marine-sdk/: README.md  pyproject.toml
services/apothecary/: README.md  prometheus.yml
services/aurum/: Dockerfile  README.md  package.json  server.js
services/aurum/public/: app.js  index.html  style.css
services/auspex/: Dockerfile  README.md  requirements.txt
services/codex/: Dockerfile  README.md
services/forge/: Dockerfile  README.md
services/iron-halo/: README.md
services/librarium/: Dockerfile  README.md
services/logis/: Dockerfile  README.md
services/primarch/: Dockerfile  README.md  go.mod
services/registry/: Dockerfile  requirements.txt
services/tacticarium/: Dockerfile  README.md
services/vox/: README.md
(+67 files in other folders)
