[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marine-sdk"
version = "0.1.0"
description = "Strategy SDK for the Astartes Primaris trading platform"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "nats-py>=2.6",
    "grpcio>=1.60",
    "protobuf>=4.25",
    "prometheus-client>=0.19",
    "pydantic>=2.5",
    "redis>=5.0",
    "psycopg[binary]>=3.1",
    "structlog>=23.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100
